# k8-eagle

./: Cargo.toml  Makefile  README.md
dockerfiles/: Dockerfile
src/: main.rs
terraform/: config.tf  deployment.tf  locals.tf  outputs.tf  providers.tf  rbac.tf  terraform.tfvars.example  variables.tf
