[package]
name = "k8-eagle"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive", "rustls-tls", "client"], default-features = false }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4.0", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio-stream = "0.1"
